--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
-        "profissao"
+        "Agencia",
+        "Corrente",
+        "conta",
+        "profissao",
+        "saldo"
     ]
 }
